--- a/style.css
+++ b/style.css
@@ -1,5 +1,129 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background: #f8f8f8;
+}
+
+.container {
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.header {
+    border-bottom: 1px solid grey;
+    height: 110px;
+    display: flex;
+    background-image: url("img/header.jpg");
+    background-size: cover;
+
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.logo_cont {
+    margin-left: 10px;
+    width: 100px;
+    height: 100px;
+}
+
+.logo {
+    width: 100%;
+    height: 100%;
+    border-radius: 24px;
+}
+
+.menu {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-around;
+}
+
+.menu_list {
+    margin-right: 2px; /* Отступ слева */
+    background: #f5f4f2; /* Цвет фона */
+}
+
+.menu_link_style {
+    font-family: Arial, sans-serif;
+    font-size: 15px; /* Размер шрифта */
+    text-decoration: none; /* Убираем подчеркивание */
+    border: 1px solid #000;
+    padding: 1px 2px;
+    display: block; /* Ссылка как блочный элемент */
+    color: green; /* Цвет ссылки */
+    transition: 200ms linear; /* Время изменения */
+}
+
+.content {
+    margin: 10px;
+}
+
+.vitrina {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-top: 64px;
+    padding-bottom: 34px;
+}
+
+.img_border {
+    width: 100%;
+    height: 100%;
+    border: 1px solid darkgreen;
+}
+
+.produce {
+    margin-bottom: 30px;
+    width: 450px;
+    height: 300px;
+}
+
+.product {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+}
+
+.product_img {
+    width: 450px;
+    height: 300px;
+}
+
+.short_order {
+    Color: #707070; /** Цвет текста – #707070;*/;
+    font-size: 14px; /** Размер шрифта – 14px;*/
+    font-style: italic; /** Начертание шрифта – italic (font-style);*/
+    line-height: 16px; /** Высота текста – 16px (line-height).*/
+    text-align: justify; /* Распределение текста по ширине */
+    margin-left: 10px;
+}
+
+.order_button {
+    margin-left: 10px;
+    padding: 2px;
+    margin-bottom: 10px;
+}
+
+.text_send {
+    margin-bottom: 10px;
+}
+
+.points {
+    margin-left: 20px;
+}
+
+.footer {
+    border-top: 1px solid gray;
+    height: 30px;
+    background-color: darkgrey;
+    padding-right: 10px;
+    padding-top: 10px;
+    text-align: end;
 }
 
 h2 {
@@ -38,66 +162,6 @@ table {
     border: solid;
 }
 
-.header {
-    color: green;
-    font-family: Saab, serif;
-    font-size: 10px;
-    text-align: left;
-    margin: 0;
-    padding: 0;
-}
-
-.vitrina {
-    height: auto;
-    width: 200px;
-}
-
-.product {
-    width: 450px;
-    height: 300px;
-}
-
-.img_border {
-    border: 1px solid darkgreen;
-}
-
-.logo {
-    height: auto;
-    width: 100px;
-    border: none;
-}
-
-.menu {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.menu_list {
-    margin-right: 2px; /* Отступ слева */
-    border: 1px solid grey; /* Рамка вокруг текста */
-    padding: 1px; /* Поля вокруг текста */
-    background: #f5f4f2; /* Цвет фона */
-}
-
-.menu_link_style {
-    font-family: Arial, sans-serif;
-    font-size: 15px; /* Размер шрифта */
-    text-decoration: none; /* Убираем подчеркивание */
-    display: block; /* Ссылка как блочный элемент */
-    height: 100%; /* Высота на весь слой */
-    color: green; /* Цвет ссылки */
-    transition: 200ms linear; /* Время изменения */
-}
-
-.short_order {
-    Color: #707070; /** Цвет текста – #707070;*/;
-    font-size: 14px; /** Размер шрифта – 14px;*/
-    font-style: italic; /** Начертание шрифта – italic (font-style);*/
-    line-height: 16px; /** Высота текста – 16px (line-height).*/
-    text-align: justify; /* Распределение текста по ширине */
-}
 
 .properties_list {
     list-style: none;
@@ -147,5 +211,13 @@ input[type=email]:focus {
     color: darkblue; /* Цвет ссылки при наведении на нее курсора мыши */
     background: #e3e2e2; /* Фон под ссылкой */
     text-decoration: underline; /* Добавляем подчеркивание */
+}
+
+.order_button:hover {
+    background-color: antiquewhite;
+}
+
+.order_button:active {
+    background-color: aquamarine;
 }
 
